<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/customtoolbar_layout"
        android:id="@+id/mCustomToolbar"/>

    <ImageView
        android:layout_gravity="center"
        android:src="@drawable/smart_bulbs"
        android:layout_width="wrap_content"
        android:layout_height="250dp"
        android:layout_marginTop="5dp"
        />

    <TextView
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:text="@string/thanks_string"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="25dp"
        />

    <TextView
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/choose_language_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="25dp"
        />

    <Spinner
        android:layout_gravity="center"
        android:id="@+id/spinner_language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:drawable/btn_dropdown"
        android:spinnerMode="dialog"
        />

    <Button android:id="@+id/btn_continue"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/btn_continue"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        />

</LinearLayout>